...
import Foundation

final class NetworkProvider: NetworkProviderProtocol {
    private let json = """
    [
        {
            "exchange_id": "BINANCE",
            "website": "https://www.binance.com/",
            "name": "Binance",
            "data_start": "2017-07-14",
            "data_end": "2023-02-10",
            "data_quote_start": "2017-12-18T21:50:58.3910192Z",
            "data_quote_end": "2023-02-10T00:00:00.0000000Z",
            "data_orderbook_start": "2017-12-18T21:50:58.3910192Z",
            "data_orderbook_end": "2023-02-10T00:00:00.0000000Z",
...
            "data_symbols_count": 2148,
            "volume_1hrs_usd": 487932622.73,
            "volume_1day_usd": 20486813096.94,
            "volume_1mth_usd": 538775124586.77
        },
        {
            "exchange_id": "KRAKEN",
            "website": "https://www.kraken.com/",
            "name": "Kraken",
            "data_start": "2013-10-22",
            "data_end": "2023-02-10",
            "data_quote_start": "2014-07-31T13:05:46.0000000Z",
            "data_quote_end": "2023-02-10T00:00:00.0000000Z",
            "data_orderbook_start": "2014-07-31T13:05:46.0000000Z",
            "data_orderbook_end": "2023-02-10T00:00:00.0000000Z",
...
            "data_symbols_count": 651,
            "volume_1hrs_usd": 43210423.65,
            "volume_1day_usd": 1530774758.05,
            "volume_1mth_usd": 59390245097.25
        },
        {
            "exchange_id": "BITSTAMP",
            "website": "https://www.bitstamp.net/",
            "name": "Bitstamp Ltd.",
            "data_start": "2011-09-13",
            "data_end": "2023-02-10",
            "data_quote_start": "2014-02-24T17:43:05.0000000Z",
            "data_quote_end": "2023-02-10T00:00:00.0000000Z",
            "data_orderbook_start": "2014-02-24T17:43:05.0000000Z",
            "data_orderbook_end": "2023-02-10T00:00:00.0000000Z",
...
